@@ -4,7 +4,7 @@
 # https://gitlab.com/FDOS/devel/pkgdevel
 
 1629122724 ee401aca00dbdcf840e15013d5dfbfb6ac2a40cb9c27f5c4b0c4b9b62892fd95cc96591f4daf53c03faeac7eb7a65f746366199b038e03566cc2d4915bf4b61a SOURCE/PGME/BUILD.BAT
-1629302799 b15fed73b1674600bb8ad18943ed36ecbe31f12b0f698056ee08f39e9a9a5b7d58100750914e974855d92d4c36c1e6c2b722fc73e06e0b70cd62a23fa83eeea8 SOURCE/PGME/CHANGES.TXT
+1629316858 e52301c1d2958fef0cf9eca0fd7666c9247e462992808b47ece72732e8a7a853b649431461b390fa80572771de70df26fdd87e3c65c650a7a84a87f17c7281d0 SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1628966156 d99e3412130cdfe96135fceddcc194bd47daf3a760e55a9c162e88556c6c9dab51fea333ccd0bcdaa5828bf09a86acb7e37f438ec1113eeec1fec089ca952027 SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -16,7 +16,7 @@
 1628278599 db9038a0485abde0765f0454e665572b7212678860627d25db23cd60bf205cf64fb473fb2cbc75773b9fd6e81d80740c78200e9d33ebe06955d2dfdf8298d0da SOURCE/PGME/ESAVER/ESAVER.DEF
 1628546409 62357b2e7e610ecfa580ad0f3eacab58fb1d211ae000e87facb2b769a9c99a68085365ad17676ed10231a325a10bb4788e0cbdcd31e22b6d2c02453dc5aae307 SOURCE/PGME/ESAVER/SNOW.PAS
 1628546393 3c6922f47f8a472150e9d0c7916a30e30278a83cecf173d44a46dd4301a35858c36ad49279659c838a6da9621faa4068a7dc4d9cd6bb5bdacbf76762f1cf451c SOURCE/PGME/ESAVER/STATIC.PAS
-1629018546 d5ad22b5aeaeb362c58cfef1ac3fac1da9ca5baf02740964a76b2c9b587d584101609b3f44c00bec4c25535e3a258976d7ea30aa25202decb2ae08672c0654f6 SOURCE/PGME/ESAVER/TIME.PAS
+1629316751 20962cce6d0c58cba903be9148bfba0c9e1f88dee4a8e1899174cc42f738c148ce8b8be2c83469dfd8029069753d105666d2961a4c714fb8ef1df6c9d73695f4 SOURCE/PGME/ESAVER/TIME.PAS
 1628416122 741d3cab7f2290de2a6b795bcb12dc49a2ac8bee01b6bbb9cff42e20a5d408b22e317b45b716830d166ceb67492624005421e1726048cfb6b35bd5e4bc9e835d SOURCE/PGME/ETERNITY/ADDLIC.PAS
 1628367526 a1ba23b45ea7f21871b9a3c45cc8214697531d8a0bf9628bc88ed48142c8873d0243dade2b469cd199c7ddb4c61b45316db8c121e7997b4ab514249e245f2afb SOURCE/PGME/ETERNITY/ECACHE.PAS
 1628367572 28a0da582b1cab9662f280d3a22cd82ddc0c637fbcb8317f2af6687c32a4f47006631d13a05e7ca493210ec035e6e131c1bf8b559004613d31749e9c005b2d67 SOURCE/PGME/ETERNITY/ECONST.PAS
@@ -59,7 +59,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629312233 4440a2da373fa73295e476065f8337296a0c4545348babd5846952b8cbc2839a6b12e5d492d0393586bec17f777e7fc73955208160c54a5090ab42c60d39d4c0 SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1629316302 ff35291d2e1d1dc8555a07d309978a6e72067b2eb8a8e8a7315631c223fc05e80f17936d42673b9ffa8648af4c75fead9a483aafa8206586d7ae07e128ec020d SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1437956760 22f0ca2363d2fb0e8fd740fc1aabc84a24cf3ec2c9c57158c756506d749f74447f4f0c484b9f9fb8741285dd35feccfc51f70a62685abe695b95d29406bc64a8 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -147,23 +147,23 @@
 1437956760 e92bab138eea32fd9632c5e929260e91469132aec7b915fd1c72e56b0207d3749d88d79b35b49ca41eeec11bed418e4bc9239ceca9caeb4ea05a754b55a430f3 SOURCE/PGME/QUICKCRT/TTEXTVIE.INC
 1437956760 4610598f2a85b4dba5865e3d36a7564bf86cae77454d6bca459dd1e9276a611d881081628104c4e7d57d7e90aed417cce454f1978b707a11ab385b1f648f9609 SOURCE/PGME/QUICKCRT/TTOGGLE.INC
 1437956760 2d9a6b0dec1f7119bc30d516221e7763ec659579a794e5bfa0edad07c57a34bb9f84d8819bd3acf558c51b2c208e6ea78790160962ea1e94f45ec3fe2f42fbef SOURCE/PGME/QUICKCRT/TWINDOW.INC
-1493997195 56709ce26d435f5b6759555c556870adf7ec13ee2ae73e40ebf0b57e6f5cd6ec89eba257e2b9ae91182ee8ad85893459e5857c28c8e2417811e8bf1aedcfd86f SOURCE/PGME/README.TXT
-1629302790 a8b58a31e0a22304eaa3df52ebb783f097f408932f89029fac41debc43ee65ab6153fa0eae060184d60cd2b1718e635152667b0c131312d2effca3566ee77fbc SOURCE/PGME/README.md
+1629316882 3bfad4cf550d841940cfa64ca7cb9e4c8243aa41dd9a0cf3ddd609ffc84fa92f8610aa62d15d28ae0841f71b7724733b97d18cc43a5c966bf591b5f57eaf3e64 SOURCE/PGME/README.md
 1629036722 7c8bd24208453385909307e3a8505ffe614706237ba95944bcf921e26df36f4dc0a97025e0bba4c19a97ced438ed89f76c9b0910fa61da93d8ba9dde4297e6dd SOURCE/PGME/TODO
 1628899417 cc2603d9f910bcd6e0f426acbcf284c38da278c51d9a63e2130ff1542461941799de7f18bf0721eb2817002953f64cdfa1267b4aa0928ff7df4884aad7d7226d SOURCE/PGME/VERSION.INC
 1629122724 ee401aca00dbdcf840e15013d5dfbfb6ac2a40cb9c27f5c4b0c4b9b62892fd95cc96591f4daf53c03faeac7eb7a65f746366199b038e03566cc2d4915bf4b61a SOURCE/PGME/BUILD.BAT
-1629302799 b15fed73b1674600bb8ad18943ed36ecbe31f12b0f698056ee08f39e9a9a5b7d58100750914e974855d92d4c36c1e6c2b722fc73e06e0b70cd62a23fa83eeea8 SOURCE/PGME/CHANGES.TXT
+1629316858 e52301c1d2958fef0cf9eca0fd7666c9247e462992808b47ece72732e8a7a853b649431461b390fa80572771de70df26fdd87e3c65c650a7a84a87f17c7281d0 SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1628966156 d99e3412130cdfe96135fceddcc194bd47daf3a760e55a9c162e88556c6c9dab51fea333ccd0bcdaa5828bf09a86acb7e37f438ec1113eeec1fec089ca952027 SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
 1628966136 7cbc96361c3eb8ccab282cd9926667a2b3e3d39bd704fb9633ccb20e056af9ab197a33030cbdab57fa988714aa29d707f03310cc2393d86bbc9f2429dd25dc90 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1629312564 da7e5afc7ccda153f6ce0a9c065eab2a8d3fc45097d0eab4aa1aca77028c19d871afafe3e84ada9193f19a137c8c2ba6cf8e6cf8ac10192cd2a36690bc3743ff SOURCE/PGME/CUSTOM/config/QSCROLL.CFG
 1437956760 fa09bd51584e6bbbbcf239b800dbe1eeafb0e9c42ef9a600641be05cb9d637d635d5eda807a99c8621c7d859c421eabc570df5a2ba6ddf5e9d1ee4f575b67f8b SOURCE/PGME/ESAVER/ATOM.PAS
 1628541541 0529f1941449738daa4ca9ecfa656e4691477a5afaa13d39d71a93af4d90e114af10f45ebe68a7c587482317c829497043ae7f2a92936ea862bff54382748f2e SOURCE/PGME/ESAVER/BLANKER.PAS
 1628546384 71ba705b8b1feba6139a198560b65c2a70ccaa3ce525f43c6e07f77f4be4d97f980078fffb6d31d75bd4f02d607914b70e0daccc05a3ecca7c00343d9e1e67dd SOURCE/PGME/ESAVER/CONWAY.PAS
 1628278599 db9038a0485abde0765f0454e665572b7212678860627d25db23cd60bf205cf64fb473fb2cbc75773b9fd6e81d80740c78200e9d33ebe06955d2dfdf8298d0da SOURCE/PGME/ESAVER/ESAVER.DEF
 1628546409 62357b2e7e610ecfa580ad0f3eacab58fb1d211ae000e87facb2b769a9c99a68085365ad17676ed10231a325a10bb4788e0cbdcd31e22b6d2c02453dc5aae307 SOURCE/PGME/ESAVER/SNOW.PAS
 1628546393 3c6922f47f8a472150e9d0c7916a30e30278a83cecf173d44a46dd4301a35858c36ad49279659c838a6da9621faa4068a7dc4d9cd6bb5bdacbf76762f1cf451c SOURCE/PGME/ESAVER/STATIC.PAS
-1629018546 d5ad22b5aeaeb362c58cfef1ac3fac1da9ca5baf02740964a76b2c9b587d584101609b3f44c00bec4c25535e3a258976d7ea30aa25202decb2ae08672c0654f6 SOURCE/PGME/ESAVER/TIME.PAS
+1629316751 20962cce6d0c58cba903be9148bfba0c9e1f88dee4a8e1899174cc42f738c148ce8b8be2c83469dfd8029069753d105666d2961a4c714fb8ef1df6c9d73695f4 SOURCE/PGME/ESAVER/TIME.PAS
 1628416122 741d3cab7f2290de2a6b795bcb12dc49a2ac8bee01b6bbb9cff42e20a5d408b22e317b45b716830d166ceb67492624005421e1726048cfb6b35bd5e4bc9e835d SOURCE/PGME/ETERNITY/ADDLIC.PAS
 1628367526 a1ba23b45ea7f21871b9a3c45cc8214697531d8a0bf9628bc88ed48142c8873d0243dade2b469cd199c7ddb4c61b45316db8c121e7997b4ab514249e245f2afb SOURCE/PGME/ETERNITY/ECACHE.PAS
 1628367572 28a0da582b1cab9662f280d3a22cd82ddc0c637fbcb8317f2af6687c32a4f47006631d13a05e7ca493210ec035e6e131c1bf8b559004613d31749e9c005b2d67 SOURCE/PGME/ETERNITY/ECONST.PAS
@@ -206,7 +206,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629312233 4440a2da373fa73295e476065f8337296a0c4545348babd5846952b8cbc2839a6b12e5d492d0393586bec17f777e7fc73955208160c54a5090ab42c60d39d4c0 SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1629316302 ff35291d2e1d1dc8555a07d309978a6e72067b2eb8a8e8a7315631c223fc05e80f17936d42673b9ffa8648af4c75fead9a483aafa8206586d7ae07e128ec020d SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1437956760 22f0ca2363d2fb0e8fd740fc1aabc84a24cf3ec2c9c57158c756506d749f74447f4f0c484b9f9fb8741285dd35feccfc51f70a62685abe695b95d29406bc64a8 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -294,7 +294,6 @@
 1437956760 e92bab138eea32fd9632c5e929260e91469132aec7b915fd1c72e56b0207d3749d88d79b35b49ca41eeec11bed418e4bc9239ceca9caeb4ea05a754b55a430f3 SOURCE/PGME/QUICKCRT/TTEXTVIE.INC
 1437956760 4610598f2a85b4dba5865e3d36a7564bf86cae77454d6bca459dd1e9276a611d881081628104c4e7d57d7e90aed417cce454f1978b707a11ab385b1f648f9609 SOURCE/PGME/QUICKCRT/TTOGGLE.INC
 1437956760 2d9a6b0dec1f7119bc30d516221e7763ec659579a794e5bfa0edad07c57a34bb9f84d8819bd3acf558c51b2c208e6ea78790160962ea1e94f45ec3fe2f42fbef SOURCE/PGME/QUICKCRT/TWINDOW.INC
-1493997195 56709ce26d435f5b6759555c556870adf7ec13ee2ae73e40ebf0b57e6f5cd6ec89eba257e2b9ae91182ee8ad85893459e5857c28c8e2417811e8bf1aedcfd86f SOURCE/PGME/README.TXT
-1629302790 a8b58a31e0a22304eaa3df52ebb783f097f408932f89029fac41debc43ee65ab6153fa0eae060184d60cd2b1718e635152667b0c131312d2effca3566ee77fbc SOURCE/PGME/README.md
+1629316882 3bfad4cf550d841940cfa64ca7cb9e4c8243aa41dd9a0cf3ddd609ffc84fa92f8610aa62d15d28ae0841f71b7724733b97d18cc43a5c966bf591b5f57eaf3e64 SOURCE/PGME/README.md
 1629036722 7c8bd24208453385909307e3a8505ffe614706237ba95944bcf921e26df36f4dc0a97025e0bba4c19a97ced438ed89f76c9b0910fa61da93d8ba9dde4297e6dd SOURCE/PGME/TODO
 1628899417 cc2603d9f910bcd6e0f426acbcf284c38da278c51d9a63e2130ff1542461941799de7f18bf0721eb2817002953f64cdfa1267b4aa0928ff7df4884aad7d7226d SOURCE/PGME/VERSION.INC
